<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_pay"
            android:title="@string/sale_bank" />
        <item
            android:id="@+id/nav_void"
            android:icon="@drawable/ic_void"
            android:title="@string/sale_void" />
        <item
            android:id="@+id/nav_refund"
            android:icon="@drawable/ic_refund"
            android:title="@string/bank_refund" />
        <item
            android:id="@+id/nav_balance_bank"
            android:icon="@drawable/ic_balance_bank"
            android:title="@string/balance_bank" />

        <item
            android:id="@+id/nav_trans_settle"
            android:icon="@drawable/ic_trans_settle"
            android:title="@string/trans_settle" />
    </group>

    <item android:title="@string/print">
        <menu>
            <item
                android:id="@+id/reprint_settle"
                android:icon="@drawable/ic_reprint_settle"
                android:title="@string/reprint_settle" />
            <item
                android:id="@+id/trans_reprint"
                android:icon="@drawable/ic_trans_reprint"
                android:title="@string/trans_reprint" />
            <item
                android:id="@+id/print_total"
                android:icon="@drawable/ic_print_total"
                android:title="@string/print_total" />
            <item
                android:id="@+id/print_detail"
                android:icon="@drawable/ic_print_detail"
                android:title="@string/print_detail" />

        </menu>
    </item>

</menu>
